Remove the vertical gap styling of the section body that is no longer needed.

--- a/js/src/components/paid-ads/budget-section/index.scss
+++ b/js/src/components/paid-ads/budget-section/index.scss
@@ -1,10 +1,4 @@
 .gla-budget-section {
-	.gla-section__body {
-		display: flex;
-		flex-direction: column;
-		gap: $grid-unit-20;
-	}
-
 	&__card-body {
 		display: flex;
 		flex-direction: column;
